--- a/contact.html
+++ b/contact.html
@@ -97,9 +97,9 @@
 
     <!-- favicons
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple1-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon1-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon1-16x16.png">
     <link rel="manifest" href="site.webmanifest">
 
 </head>
@@ -181,9 +181,7 @@
                     </div>
                     <div class="column xl-6 lg-12 u-flexitem-x-right">
                         <p class="lead">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Alias eos quas blanditiis, quos sint nostrum fugit aperiam 
-                            inventore optio itaque molestias corporis, ipsa tenetur eligendi nihil iste porro, natus culpa consequuntur. Maxime, 
-                            corporis tempore. Sed tenetur veritatis velit recusandae eum, molestiae voluptate ducimus laudantium esse illo. 
+                            our business has the potential to achieve even greater success, and I’m here to help make that happen. With creative strategies, innovative solutions, and a strong focus on your unique goals, we can work together to grow your brand, reach new audiences, and drive real results. Whether you're just starting out or ready to expand, let's build something amazing that takes your business to the next level. 
                         </p>
                     </div>                       
                 </div> <!-- pageintro -->
@@ -207,10 +205,7 @@
                             <div class="column xl-6 md-12" style="display: flex; flex-direction: column; justify-content: center;">
                                 <h2 style="margin-bottom: 20px;">Let's Work Together</h2>
                                 <p>
-                                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt quisquam voluptatibus debitis aperiam ratione. Officia, 
-                                    suscipit iure, tenetur eum consequatur, consequuntur omnis accusamus odit quod pariatur excepturi architecto veniam. Soluta 
-                                    modi dignissimos libero blanditiis at saepe doloribus temporibus illo facilis dolorem, aliquam obcaecati accusamus nihil 
-                                    laboriosam, esse vel. Quod, vitae.
+                                    Great things happen when we work together. Whether you have a big idea or need help bringing your vision to life, I’m here to support you every step of the way. Let's combine your goals with my skills to create something truly amazing. Ready to get started? I’d love to hear from you!
                                 </p>
                             </div>
                 
