--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="https://twitter.com/yourusername" target="_blank">
+                                    <a href="https://twitter.com/kaushal_singh27" target="_blank">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M19.633 7.997c.013.175.013.349.013.523 0 5.325-4.053 11.461-11.46 11.461-2.282 0-4.402-.661-6.186-1.809.324.037.636.05.973.05 1.883 0 3.616-.636 5.001-1.721-1.771-.037-3.255-1.197-3.767-2.793.249.037.499.062.761.062.361 0 .724-.05 1.061-.137-1.847-.374-3.23-1.995-3.23-3.953v-.05c.537.299 1.16.486 1.82.511-1.023-.682-1.723-1.849-1.723-3.157 0-.748.199-1.434.548-2.032 1.983 2.443 4.964 4.04 8.306 4.215-.062-.3-.1-.611-.1-.923 0-2.22 1.796-4.028 4.028-4.028 1.16 0 2.207.486 2.943 1.272.91-.175 1.782-.512 2.556-.973-.299.935-.936 1.721-1.771 2.22.811-.088 1.597-.312 2.319-.624-.533.89-1.213 1.665-2.059 2.22z"/></svg>
                                         <span class="u-screen-reader-text">Twitter</span>
                                     </a>
